crates/backends/rlx-mlx-sys/cpp/rlx_mlx_shim.h

typedef struct rlx_mlx_array_s rlx_mlx_array_t;
// Return codes. Anything non-zero means "check rlx_mlx_last_error()".
#define RLX_MLX_OK 0
// 3D transposed convolution. Input/weight in MLX NDHWC /
// [C_out, kD, kH, kW, C_in] layout (caller transposes from NCDHW /
// PyTorch [C_in, C_out/groups, kD, kH, kW] upstream). MLX only
// supports groups=1 for 3D transpose.
int rlx_mlx_op_conv_transpose3d(
    rlx_mlx_array_t* input,
    rlx_mlx_array_t* weight,
    int stride_d, int stride_h, int stride_w,
    int pad_d,    int pad_h,    int pad_w,
    int dil_d,    int dil_h,    int dil_w,
    int out_pad_d, int out_pad_h, int out_pad_w,
    int groups,
    rlx_mlx_array_t** out);
// Force `a` into row-major contiguous storage. Maps `mc::contiguous`.
// Needed after a transpose that MLX's compile pass would otherwise
// elide as a strided view: the elision corrupts the readback layout.
int rlx_mlx_op_contiguous(
    rlx_mlx_array_t* a,
    rlx_mlx_array_t** out);
// Custom Metal kernel for 2D max-pool backward. NCHW-layout `x`/`dy`,
// produces dx [N, C, H, W] f32. Atomic-accumulating scatter (handles
// stride < kernel via per-thread argmax + atomic_fetch_add). Generally
// 5–10× faster than the primitive-composition lowering on shapes where
// MLX's `scatter_add_axis` is the bottleneck. Caller frees `*out`.
int rlx_mlx_op_maxpool2d_backward_metal(
    rlx_mlx_array_t* x,
    rlx_mlx_array_t* dy,
    int n, int c, int h, int w,
    int h_out, int w_out,
    int kh, int kw,
    int sh, int sw,
    int ph, int pw,
    rlx_mlx_array_t** out);
// Custom Metal kernel for 3D max-pool backward. NCDHW-layout `x`/`dy`,
// produces dx [N, C, D, H, W] f32. Gather-style (strict `>` argmax),
// matching CPU/CUDA. Caller frees `*out`.
int rlx_mlx_op_maxpool3d_backward_metal(
    rlx_mlx_array_t* x,
    rlx_mlx_array_t* dy,
    int n, int c, int d, int h, int w,
    int d_out, int h_out, int w_out,
    int kd, int kh, int kw,
    int sd, int sh, int sw,
    int pd, int ph, int pw,
    rlx_mlx_array_t** out);
// Element-wise gather along a single axis. `a` and `indices` must
// broadcast on non-axis dims; output has `indices`'s shape (broadcast
// up). Maps `mc::take_along_axis`.
int rlx_mlx_op_take_along_axis(
    rlx_mlx_array_t* a,
    rlx_mlx_array_t* indices,
    int axis,
    rlx_mlx_array_t** out);
// Element-wise scatter-add along a single axis. `a`, `indices`, and
// `updates` must all have the same rank; non-axis dims must match
// exactly. For each multi-index i, a[i_axis_replaced_by_indices[i]]
// += updates[i]. Maps `mc::scatter_add_axis`.
int rlx_mlx_op_scatter_add_axis(
    rlx_mlx_array_t* a,
    rlx_mlx_array_t* indices,
    rlx_mlx_array_t* updates,
    int axis,
    rlx_mlx_array_t** out);
// General N-D convolution with asymmetric padding, kernel dilation,
// input dilation (zero-stuffing), and an optional kernel-flip flag —
// the full surface MLX exposes for representing transposed/backward
// convs. Input/weight in MLX's channels-last layout.
int rlx_mlx_op_conv_general(
    rlx_mlx_array_t* input,
    rlx_mlx_array_t* weight,
    const int* stride, size_t stride_n,
    const int* padding_lo, size_t padding_lo_n,
    const int* padding_hi, size_t padding_hi_n,
    const int* kernel_dilation, size_t kernel_dilation_n,
    const int* input_dilation, size_t input_dilation_n,
    int groups,
    int flip,
    rlx_mlx_array_t** out);
// argpartition along an axis — used by Top-K to get the indices of
// the k largest values without sorting the rest.
int rlx_mlx_op_argpartition(
    rlx_mlx_array_t* a,
    int kth, int axis,
    rlx_mlx_array_t** out);
// Scatter-add: `a` updated at `indices` along `axis` with `updates`,
// summed wherever multiple updates target the same row.
int rlx_mlx_op_scatter_add(
    rlx_mlx_array_t* a,
    rlx_mlx_array_t* indices,
    rlx_mlx_array_t* updates,
    int axis,
    rlx_mlx_array_t** out);
// gather_mm: indexed batched matmul. `a` is [M, K], `b` is
// [num_experts, K, N], `idx` is [M] (int) — output[i] = a[i] @ b[idx[i]].
int rlx_mlx_op_gather_mm(
    rlx_mlx_array_t* a,
    rlx_mlx_array_t* b,
    rlx_mlx_array_t* idx,
    rlx_mlx_array_t** out);
// quantized_matmul: w is the packed quantized weight matrix; scales
// (and optional biases) come from the rlx QuantScheme metadata. bits
// = 4 or 8 depending on scheme. `mode` is "affine" / "mxfp4" / "mxfp8"
// / "nvfp4". Returns x @ dequant(w).
int rlx_mlx_op_quantized_matmul(
    rlx_mlx_array_t* x,
    rlx_mlx_array_t* w,
    rlx_mlx_array_t* scales,
    rlx_mlx_array_t* biases_or_null,
    int transpose,
    int group_size,
    int bits,
    const char* mode,
    rlx_mlx_array_t** out);
// Multinomial categorical sample. `logits` shape [..., vocab]; output
// shape [..., 1] (single sample per row). `seed` controls the PRNG;
// pass 0 for "use a thread-local counter."
int rlx_mlx_op_categorical(
    rlx_mlx_array_t* logits,
    int axis,
    uint64_t seed,
    rlx_mlx_array_t** out);
// Argmax along an axis. Returns int32 indices.
int rlx_mlx_op_argmax(
    rlx_mlx_array_t* a,
    int axis, int keep_dim,
    rlx_mlx_array_t** out);
// Strided slice — same as op_slice but with explicit per-axis strides.
// Used by Pool to extract sliding windows.
int rlx_mlx_op_slice_strided(
    rlx_mlx_array_t* a,
    const int* start, const int* stop, const int* strides, size_t ndim,
    rlx_mlx_array_t** out);
// Constant-pad an array. `low` and `high` are per-axis pad widths
// (each `ndim` ints). `pad_value` is host-side f32; the shim wraps
// it as a 0-d array internally.
int rlx_mlx_op_pad(
    rlx_mlx_array_t* a,
    const int* low, const int* high, size_t ndim,
    float pad_value,
    rlx_mlx_array_t** out);
// Top-k VALUES along an axis (sorted descending). Used by Sample
// top_k filtering — the k-th largest value becomes the threshold.
// argpartition (we already expose it) is the indices counterpart.
int rlx_mlx_op_topk_values(
    rlx_mlx_array_t* a,
    int k, int axis,
    rlx_mlx_array_t** out);
// Sort along an axis (ascending). Used by Sample top_p to compute
// the nucleus threshold via cumulative sum over sorted probabilities.
int rlx_mlx_op_sort(
    rlx_mlx_array_t* a,
    int axis,
    rlx_mlx_array_t** out);
// ── PR7: persistent compiled graphs (mlx::compile) ───────────────
//
// Rust supplies a lowering callback; we wrap it as a std::function and
// hand it to mc::compile. The returned compiled-fn handle replays the
// optimized trace on subsequent calls (until input shapes change).
//
// The callback contract:
//   - `inputs` is an array of mlx_array_t* the callback may use as
//     leaves (it does NOT own them — does not free).
//   - The callback writes its output handles into `out_outputs`
//     (capacity `cap`) and stores the produced count in `*out_n_outputs`.
//     Ownership of the output handles transfers to C++ — the callback
//     must NOT free them.
//   - Returns RLX_MLX_OK on success; non-zero is treated as failure
//     and surfaces via rlx_mlx_last_error() (which the callback should
//     have set).

typedef int (*rlx_mlx_lower_fn)(
    void* ud,
    rlx_mlx_array_t* const* inputs, size_t n_inputs,
    rlx_mlx_array_t** out_outputs, size_t cap, size_t* out_n_outputs);
typedef struct rlx_mlx_compiled_s rlx_mlx_compiled_t;
int rlx_mlx_compile(
    rlx_mlx_lower_fn fn, void* ud,
    int shapeless,
    rlx_mlx_compiled_t** out);
int rlx_mlx_compiled_call(
    rlx_mlx_compiled_t* compiled,
    rlx_mlx_array_t* const* inputs, size_t n_inputs,
    rlx_mlx_array_t** out_outputs, size_t cap, size_t* out_n_outputs);
void rlx_mlx_compiled_free(rlx_mlx_compiled_t* compiled);
// `mlx::compile` multi-output slot limit (training backward graphs).
// Override with env `RLX_COMPILE_OUTPUT_CAP` (or legacy `RLX_MLX_COMPILE_OUTPUT_CAP`)
// or `rlx_mlx_set_compile_output_cap`.
size_t rlx_mlx_compile_output_cap(void);
void rlx_mlx_set_compile_output_cap(size_t cap);
void rlx_mlx_reset_compile_output_cap(void);
// ── Distributed (multi-node) ─────────────────────────────────────
//
// Thin C ABI over mlx::core::distributed. `init` discovers the process
// group via MLX's launcher (env-configured) and selects a backend:
// "jaccl" (RDMA over Thunderbolt, macOS SDK >= 26.2), "ring" (TCP),
// "mpi", or "any" to let MLX choose what's available. The group is held
// process-globally in the shim; subsequent calls operate on it.
//
// Collectives and point-to-point work on host-side f32 buffers: the
// shim wraps each as a 1-D array, runs the distributed op against the
// group, eval()s it (which forces the actual transfer), and copies the
// result back. SPMD semantics — every rank must call the same
// collective in the same order.

// Is a distributed backend available in this build/run? *out = 0|1.
int rlx_mlx_dist_is_available(int* out);
// Initialize the distributed backend. `backend` is one of
// "any"|"jaccl"|"ring"|"mpi" (NULL or "" means "any"). When `strict` is
// 0 and no backend is available, MLX returns a singleton group (size 1)
// and ops become no-ops. Writes this process's rank and the world size.
int rlx_mlx_dist_init(int strict, const char* backend, int* out_rank, int* out_size);
// Rank / size of the initialized group.
int rlx_mlx_dist_rank(int* out_rank);
int rlx_mlx_dist_size(int* out_size);
// AllReduce(sum): out[i] = sum over ranks of in[i]. `out` may not alias
// `in`; both hold `nelems` f32.
int rlx_mlx_dist_all_sum_f32(const float* in, float* out, size_t nelems);
// AllGather: out = concat of every rank's `in` (nelems each), in rank
// order. `out_cap` must be >= nelems * world_size.
int rlx_mlx_dist_all_gather_f32(
    const float* in, size_t nelems, float* out, size_t out_cap);
// Point-to-point. `send` transmits `nelems` f32 to rank `dst`; `recv`
// receives exactly `nelems` f32 from rank `src` (shape must match the
// sender). FIFO per peer pair — issue matched send/recv in order.
int rlx_mlx_dist_send_f32(const float* data, size_t nelems, int dst);
int rlx_mlx_dist_recv_f32(float* out, size_t nelems, int src);
// Barrier: synchronize all ranks (implemented as an all_sum of one
// element, matching the mlx-lm startup-barrier idiom).
int rlx_mlx_dist_barrier(void);
// Device-resident AllReduce(sum) on array handles. Unlike the f32 variant
// above (which copies to/from host), this composes `mlx::core::distributed::
// all_sum` directly on the lazy MLX array and returns a new lazy array — no
// host round-trip. This is the in-graph tensor-parallel collective: it stays
// device-resident and rides MLX's jaccl/ring transport. The result is lazy;
// the caller evals it as part of the surrounding graph.
int rlx_mlx_dist_all_sum_array(rlx_mlx_array_t* in, rlx_mlx_array_t** out);
// Device-resident all-reduce honoring the reduction kind (0=Sum 1=Mean 2=Max
// 3=Min, matching rlx-collectives). Lazy; no host round-trip.
int rlx_mlx_dist_all_reduce_array(rlx_mlx_array_t* in, int kind, rlx_mlx_array_t** out);
// Device-resident AllGather / ReduceScatter on array handles, mirroring
// all_sum_array. all_gather concatenates each rank's shard along axis 0;
// reduce_scatter is a fused all_sum + this rank's axis-0 slice (mlx has no
// native reduce-scatter). Both are lazy with no host round-trip.
int rlx_mlx_dist_all_gather_array(rlx_mlx_array_t* in, rlx_mlx_array_t** out);
int rlx_mlx_dist_reduce_scatter_array(rlx_mlx_array_t* in, int kind, rlx_mlx_array_t** out);
// ── Weight I/O (mx.load / load_safetensors) ─────────────────────
//
// Named-array lists own heap strings + array handles. Caller frees with
// rlx_mlx_named_list_free (which also frees each array handle).

typedef struct rlx_mlx_named_array_list_s rlx_mlx_named_array_list_t;
int rlx_mlx_load_safetensors(const char* path, rlx_mlx_named_array_list_t** out);
int rlx_mlx_load_npy(const char* path, rlx_mlx_array_t** out);
size_t rlx_mlx_named_list_len(const rlx_mlx_named_array_list_t* list);
int rlx_mlx_named_list_get(
    rlx_mlx_named_array_list_t* list,
    size_t index,
    const char** out_name,
    rlx_mlx_array_t** out_array);
void rlx_mlx_named_list_free(rlx_mlx_named_array_list_t* list);