crates/backends/rlx-mlx-sys/src/ffi.rs


    pub fn rlx_mlx_op_conv_transpose3d(
        input: *mut mlx_array_t,
        weight: *mut mlx_array_t,
        stride_d: c_int,
        stride_h: c_int,
        stride_w: c_int,
        pad_d: c_int,
        pad_h: c_int,
        pad_w: c_int,
        dil_d: c_int,
        dil_h: c_int,
        dil_w: c_int,
        out_pad_d: c_int,
        out_pad_h: c_int,
        out_pad_w: c_int,
        groups: c_int,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_conv_general(
        input: *mut mlx_array_t,
        weight: *mut mlx_array_t,
        stride: *const c_int,
        stride_n: usize,
        padding_lo: *const c_int,
        padding_lo_n: usize,
        padding_hi: *const c_int,
        padding_hi_n: usize,
        kernel_dilation: *const c_int,
        kernel_dilation_n: usize,
        input_dilation: *const c_int,
        input_dilation_n: usize,
        groups: c_int,
        flip: c_int,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_argpartition(
        a: *mut mlx_array_t,
        kth: c_int,
        axis: c_int,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_contiguous(a: *mut mlx_array_t, out: *mut *mut mlx_array_t) -> c_int;

    pub fn rlx_mlx_op_maxpool2d_backward_metal(
        x: *mut mlx_array_t,
        dy: *mut mlx_array_t,
        n: c_int,
        c: c_int,
        h: c_int,
        w: c_int,
        h_out: c_int,
        w_out: c_int,
        kh: c_int,
        kw: c_int,
        sh: c_int,
        sw: c_int,
        ph: c_int,
        pw: c_int,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_maxpool3d_backward_metal(
        x: *mut mlx_array_t,
        dy: *mut mlx_array_t,
        n: c_int,
        c: c_int,
        d: c_int,
        h: c_int,
        w: c_int,
        d_out: c_int,
        h_out: c_int,
        w_out: c_int,
        kd: c_int,
        kh: c_int,
        kw: c_int,
        sd: c_int,
        sh: c_int,
        sw: c_int,
        pd: c_int,
        ph: c_int,
        pw: c_int,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_take_along_axis(
        a: *mut mlx_array_t,
        indices: *mut mlx_array_t,
        axis: c_int,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_scatter_add_axis(
        a: *mut mlx_array_t,
        indices: *mut mlx_array_t,
        updates: *mut mlx_array_t,
        axis: c_int,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_scatter_add(
        a: *mut mlx_array_t,
        indices: *mut mlx_array_t,
        updates: *mut mlx_array_t,
        axis: c_int,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_gather_mm(
        a: *mut mlx_array_t,
        b: *mut mlx_array_t,
        idx: *mut mlx_array_t,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_quantized_matmul(
        x: *mut mlx_array_t,
        w: *mut mlx_array_t,
        scales: *mut mlx_array_t,
        biases_or_null: *mut mlx_array_t,
        transpose: c_int,
        group_size: c_int,
        bits: c_int,
        mode: *const c_char,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_categorical(
        logits: *mut mlx_array_t,
        axis: c_int,
        seed: u64,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_argmax(
        a: *mut mlx_array_t,
        axis: c_int,
        keep_dim: c_int,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_slice_strided(
        a: *mut mlx_array_t,
        start: *const c_int,
        stop: *const c_int,
        strides: *const c_int,
        ndim: usize,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_pad(
        a: *mut mlx_array_t,
        low: *const c_int,
        high: *const c_int,
        ndim: usize,
        pad_value: c_float,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_topk_values(
        a: *mut mlx_array_t,
        k: c_int,
        axis: c_int,
        out: *mut *mut mlx_array_t,
    ) -> c_int;

    pub fn rlx_mlx_op_sort(a: *mut mlx_array_t, axis: c_int, out: *mut *mut mlx_array_t) -> c_int;

    pub fn rlx_mlx_compile(
        fn_ptr: LowerFn,
        ud: *mut c_void,
        shapeless: c_int,
        out: *mut *mut mlx_compiled_t,
    ) -> c_int;

    pub fn rlx_mlx_compiled_call(
        compiled: *mut mlx_compiled_t,
        inputs: *const *mut mlx_array_t,
        n_inputs: usize,
        out_outputs: *mut *mut mlx_array_t,
        cap: usize,
        out_n_outputs: *mut usize,
    ) -> c_int;

    pub fn rlx_mlx_compiled_free(compiled: *mut mlx_compiled_t);

    pub fn rlx_mlx_compile_output_cap() -> usize;
    pub fn rlx_mlx_set_compile_output_cap(cap: usize);
    pub fn rlx_mlx_reset_compile_output_cap();

    // ── Distributed (multi-node) ─────────────────────────────────
    pub fn rlx_mlx_dist_is_available(out: *mut c_int) -> c_int;
    pub fn rlx_mlx_dist_init(
        strict: c_int,
        backend: *const c_char,
        out_rank: *mut c_int,
        out_size: *mut c_int,
    ) -> c_int;
    pub fn rlx_mlx_dist_rank(out_rank: *mut c_int) -> c_int;
    pub fn rlx_mlx_dist_size(out_size: *mut c_int) -> c_int;
    pub fn rlx_mlx_dist_all_sum_f32(inp: *const c_float, out: *mut c_float, nelems: usize)
    -> c_int;
    pub fn rlx_mlx_dist_all_gather_f32(
        inp: *const c_float,
        nelems: usize,
        out: *mut c_float,
        out_cap: usize,
    ) -> c_int;
    pub fn rlx_mlx_dist_send_f32(data: *const c_float, nelems: usize, dst: c_int) -> c_int;
    pub fn rlx_mlx_dist_recv_f32(out: *mut c_float, nelems: usize, src: c_int) -> c_int;
    pub fn rlx_mlx_dist_barrier() -> c_int;
    pub fn rlx_mlx_dist_all_sum_array(inp: *mut mlx_array_t, out: *mut *mut mlx_array_t) -> c_int;
    pub fn rlx_mlx_dist_all_reduce_array(
        inp: *mut mlx_array_t,
        kind: c_int,
        out: *mut *mut mlx_array_t,
    ) -> c_int;
    pub fn rlx_mlx_dist_all_gather_array(
        inp: *mut mlx_array_t,
        out: *mut *mut mlx_array_t,
    ) -> c_int;
    pub fn rlx_mlx_dist_reduce_scatter_array(
        inp: *mut mlx_array_t,
        kind: c_int,
        out: *mut *mut mlx_array_t,
    ) -> c_int;
}

#[repr(C)]
pub struct mlx_compiled_t {
    _private: [u8; 0],
}

/// Type of the lowering callback that crosses FFI into C++ for the
/// mlx::compile path. Returns `RLX_MLX_OK` on success, anything else
/// is treated as an error and the C++ wrapper throws.
pub type LowerFn = unsafe extern "C" fn(
    ud: *mut c_void,
    inputs: *const *mut mlx_array_t,
    n_inputs: usize,
    out_outputs: *mut *mut mlx_array_t,
    cap: usize,
    out_n_outputs: *mut usize,
) -> c_int;

#[repr(C)]
pub struct mlx_named_array_list_t {
    _private: [u8; 0],
}

unsafe extern "C" {
    pub fn rlx_mlx_load_safetensors(
        path: *const c_char,
        out: *mut *mut mlx_named_array_list_t,
    ) -> c_int;
    pub fn rlx_mlx_load_npy(path: *const c_char, out: *mut *mut mlx_array_t) -> c_int;
    pub fn rlx_mlx_named_list_len(list: *const mlx_named_array_list_t) -> usize;
    pub fn rlx_mlx_named_list_get(
        list: *mut mlx_named_array_list_t,
        index: usize,
        out_name: *mut *const c_char,
        out_array: *mut *mut mlx_array_t,
    ) -> c_int;
    pub fn rlx_mlx_named_list_free(list: *mut mlx_named_array_list_t);
}

/// Silence unused-import lint when c_void isn't referenced elsewhere.
#[allow(dead_code)]
const _: *const c_void = std::ptr::null();
